--- a/SMS.Web/Views/Guard/ConfirmBringOut.cshtml
+++ b/SMS.Web/Views/Guard/ConfirmBringOut.cshtml
@@ -211,7 +211,7 @@
                     remark: $(remarkId).val(),
                     status: 1,
                     ret: true
-                })
+                }, true)
             }
 
             function handleUnapproveReturn(id) {
@@ -221,7 +221,7 @@
                     remark: $(remarkId).val(),
                     status: 0,
                     ret: true
-                })
+                }, true)
             }
         </script>
     }
