--- a/SMS.Web/Views/Guard/ConfirmGuestItem.cshtml
+++ b/SMS.Web/Views/Guard/ConfirmGuestItem.cshtml
@@ -294,7 +294,7 @@
                 itemId,
                 remark: $(remarkId).val(),
                 status: 1,
-            })
+            }, true)
         }
 
         function handleUnapproveOut(itemId) {
@@ -304,7 +304,7 @@
                 itemId,
                 remark: $(remarkId).val(),
                 status: 0,
-            })
+            }, true)
         }
     </script>
 }
