--- a/SMS.Web/Views/BringIn/BIReport.cshtml
+++ b/SMS.Web/Views/BringIn/BIReport.cshtml
@@ -87,7 +87,7 @@
                 <th>Tài sản <br />(Assets Name)</th>
                 <th>Thông số <br />(Serial)</th>
                 <th>Số lượng <br />(Qty)</th>
-                <th>Đơn vị <br />(Approved by)</th>
+                <th>Đơn vị <br />(Unit)</th>
                 <th>Loại hàng <br />(Asset type)</th>
                 <th colspan="2">Mang ra<br /> (Return)</th>
                 <th>TM phê duyệt<br /> (Approved by)</th>
