--- a/SMS.Web/Views/BringOut/BOReport.cshtml
+++ b/SMS.Web/Views/BringOut/BOReport.cshtml
@@ -87,14 +87,14 @@
                 <th>Tài sản <br />(Assets Name)</th>
                 <th>Thông số <br />(Serial)</th>
                 <th>Số lượng <br />(Qty)</th>
-                <th>Đơn vị <br />(Approved by)</th>
+                <th>Đơn vị <br />(Unit)</th>
                 <th>Loại hàng <br />(Asset type)</th>
                 <th colspan="2">Mang ra<br /> (Return)</th>
                 <th>TM phê duyệt<br /> (Approved by)</th>
                 <th>ITT/SMT phê duyệt<br /> (ITT/SMT Approved)</th>
                 <th>FST phê duyệt<br /> (FST Approved)</th>
-                <th>Bảo vệ<br /> (Vào/In)</th>
                 <th>Bảo vệ<br /> (Ra/Out)</th>
+                <th>Bảo vệ<br /> (Quay lại/Return)</th>
             </tr>
             <tr>
                 @foreach (var item in Model.Bring_Out_Items)
