--- a/SMS.Web/Views/Guard/Queue.cshtml
+++ b/SMS.Web/Views/Guard/Queue.cshtml
@@ -468,9 +468,9 @@
                             <td>@item.Team</td>
                             <td>@item.Position</td>
                             <td>
-                                <button class="btn btn-print btnPrint btn-primary btn-standard" title="In báo cáo">
+                                <a href="/Guest/GuestReport/@item.ID" class="btn btn-print btnPrint btn-primary btn-standard" title="In báo cáo">
                                     <i class="fas fa-print" style="margin-left:-3.5px;"></i>
-                                </button>
+                                </a>
                             </td>
                         </tr>
                     }
