--- a/SMS.Web/Views/BringOut/History.cshtml
+++ b/SMS.Web/Views/BringOut/History.cshtml
@@ -191,7 +191,7 @@
                     },
                     {
                         data: function (res) {
-                            return `<a href="/BringOut/BOReport/${res.ID}" class="btn btn-print btn-primary btn-standard" id="btnPrint" title="In báo cáo">
+                            return `<a href="/BringOut/BOReport/${res.ID}" target="_blank" class="btn btn-print btn-primary btn-standard" id="btnPrint" title="In báo cáo">
                                                                     <i class="fas fa-print" style="margin-left:-3.5px;"></i>
                                                                 </a>`;
                         }
