--- a/SMS.Web/Views/Shared/_Layout.cshtml
+++ b/SMS.Web/Views/Shared/_Layout.cshtml
@@ -113,7 +113,7 @@
                             <div class="bg-sub-menu py-2 collapse-inner rounded">
                                 <a id="LEReport" class="collapse-item grey-a-tag" href="/LeaveEarly/SummaryLE" target="_blank">CNV về sớm</a>
                                 <a id="GOReport" class="collapse-item grey-a-tag" href="#">CNV ra ngoài</a>
-                                <a id="BIReport" class="collapse-item grey-a-tag" href="#">CNV mang hàng vào</a>
+                                <a id="BIReport" class="collapse-item grey-a-tag" href="/BringIn/SummaryBI">CNV mang hàng vào</a>
                                 <a id="BOReport" class="collapse-item grey-a-tag" href="#">CNV mang hàng ra</a>
                                 <a id="Guest" class="collapse-item grey-a-tag" href="#">Khách vào ra</a>
                                 <a id="GuestItems" class="collapse-item grey-a-tag" href="#">Khách mang hàng vào/ra</a>
